publish npm package and use it in a small app

--- a/node-app/package.json
+++ b/node-app/package.json
@@ -1,17 +1,15 @@
 {
-  "name": "npm-demo",
+  "name": "app",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "underscore": "^1.13.6"
-  },
-  "devDependencies": {
-    "jshint": "^2.13.6"
+    "maxime-mettey-first-package": "^1.0.0"
   }
 }
