--- a/express-demo/package.json
+++ b/express-demo/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "joi": "^17.9.2"
+    "helmet": "^7.0.0",
+    "joi": "^17.9.2",
+    "morgan": "^1.10.0"
   }
 }
